fix alignment

--- a/src/components/ExperiencePage/ExperiencePage.css
+++ b/src/components/ExperiencePage/ExperiencePage.css
@@ -16,6 +16,7 @@
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
+    text-align: left;
 }
 
 .experience-container > * {
